--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇬🇧 英国-1.94MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 129.159.33.199, port: 45328, type: vmess, uuid: 842c33ff-31b5-410c-a96e-0cb52a99a6da, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.159.33.199}}
   - {name: 卢森堡-8.27MB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: f5f239fc-d21a-45ba-aeaf-b137d7d730a6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.25MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-730.9KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 未知国家-730.9KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇸🇬 新加坡-1.68MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-241.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-442.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.08MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.94MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-845.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 卢森堡-8.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 未知国家-730.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
