--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-442.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.24MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 20b48507-b52b-49bc-93b4-90ef114532fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇰🇷 韩国-2.25MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.94MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-351.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-241.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇸🇬 新加坡-3.08MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇨🇳 中国-15.56MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇨🇦 加拿大-4.88MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.03MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.68MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇯🇵 日本-4.81MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-533.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.56MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
