--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-4.81MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇨🇳 中国-17.96MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.13MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-616.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-835.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
